Agregando modelos y entidades

--- a/PracticaProgramada1-Pokemon/DA/DA.csproj
+++ b/PracticaProgramada1-Pokemon/DA/DA.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Abstracciones\Abstracciones.csproj" />
+  </ItemGroup>
+
 </Project>
