--- a/PracticaProgramada1-Pokemon/Abstracciones/Abstracciones.csproj
+++ b/PracticaProgramada1-Pokemon/Abstracciones/Abstracciones.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.3" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+  </ItemGroup>
+
 </Project>
